tests/mm0_mmu/fail/bad-sort5.mm0
-- free modifier not last 
free provable sort s12;